--- a/EcoleData.csproj
+++ b/EcoleData.csproj
@@ -4,9 +4,32 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>ecoleDataIco.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Media\dashedLine.png" />
+    <None Remove="Media\ecoleDataLogo.jpg" />
+    <None Remove="Media\ecoleIcon.ico" />
+    <None Remove="Media\ecoleLogo.jpg" />
+    <None Remove="Media\fonts\Roboto-Black.ttf" />
+    <None Remove="Media\fonts\Roboto-BlackItalic.ttf" />
+    <None Remove="Media\fonts\Roboto-Bold.ttf" />
+    <None Remove="Media\fonts\Roboto-BoldItalic.ttf" />
+    <None Remove="Media\fonts\Roboto-Italic.ttf" />
+    <None Remove="Media\fonts\Roboto-Light.ttf" />
+    <None Remove="Media\fonts\Roboto-LightItalic.ttf" />
+    <None Remove="Media\fonts\Roboto-Medium.ttf" />
+    <None Remove="Media\fonts\Roboto-MediumItalic.ttf" />
+    <None Remove="Media\fonts\Roboto-Regular.ttf" />
+    <None Remove="Media\fonts\Roboto-Thin.ttf" />
+    <None Remove="Media\fonts\Roboto-ThinItalic.ttf" />
+    <None Remove="Media\fullLine.png" />
     <None Remove="Media\icons\icons8-calendar-16.png" />
     <None Remove="Media\icons\icons8-clear-filters-16.png" />
     <None Remove="Media\icons\icons8-filter-16.png" />
@@ -17,6 +40,13 @@
     <None Remove="Media\icons\icons8-school-building-16.png" />
     <None Remove="Media\icons\icons8-stairs-up-16.png" />
     <None Remove="Media\icons\icons8-stocks-16.png" />
+    <None Remove="Media\mainLogo.png" />
+    <None Remove="Media\Settings\settings.xml" />
+    <None Remove="Media\tempLogo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Media\Settings\settings.xml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,6 +56,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Media\dashedLine.png" />
+    <Resource Include="Media\fonts\Roboto-Black.ttf" />
+    <Resource Include="Media\fonts\Roboto-BlackItalic.ttf" />
+    <Resource Include="Media\fonts\Roboto-Bold.ttf" />
+    <Resource Include="Media\fonts\Roboto-BoldItalic.ttf" />
+    <Resource Include="Media\fonts\Roboto-Italic.ttf" />
+    <Resource Include="Media\fonts\Roboto-Light.ttf" />
+    <Resource Include="Media\fonts\Roboto-LightItalic.ttf" />
+    <Resource Include="Media\fonts\Roboto-Medium.ttf" />
+    <Resource Include="Media\fonts\Roboto-MediumItalic.ttf" />
+    <Resource Include="Media\fonts\Roboto-Regular.ttf" />
+    <Resource Include="Media\fonts\Roboto-Thin.ttf" />
+    <Resource Include="Media\fonts\Roboto-ThinItalic.ttf" />
+    <Resource Include="Media\fullLine.png" />
     <Resource Include="Media\icons\icons8-calendar-16.png" />
     <Resource Include="Media\icons\icons8-clear-filters-16.png" />
     <Resource Include="Media\icons\icons8-filter-16.png" />
@@ -36,6 +80,8 @@
     <Resource Include="Media\icons\icons8-school-building-16.png" />
     <Resource Include="Media\icons\icons8-stairs-up-16.png" />
     <Resource Include="Media\icons\icons8-stocks-16.png" />
+    <Resource Include="Media\mainLogo.png" />
+    <Resource Include="Media\tempLogo.png" />
   </ItemGroup>
 
 </Project>
