--- a/EcoleData.csproj
+++ b/EcoleData.csproj
@@ -12,6 +12,10 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Media\dashedLine.png" />
     <None Remove="Media\ecoleDataLogo.jpg" />
